# veochakra

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  honeywellhackathon1.ipynb  main.py  pyproject.toml
app/: streamlit_app.py
app/pages/: replay.py
artifacts/: lgbm_frame_scorer.joblib  meta.json
artifacts/cache_dets/: 08_724700.jsonl  10_11077112.jsonl  20_2980112.jsonl
inference/: cache_io.py  draw.py  events.py  pipeline.py
